[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
# riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
riscv = { version = "0.11" ,features = ["s-mode"]}
riscv-gitee = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"], package = "riscv" }

embassy-time = { path = "../../embassy/embassy-time/", default-features = false, features = ["tick-hz-10_000_000"] } # 12_500_000 for qemu
embassy-executor = { path = "../../embassy/embassy-executor/", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-time-driver = { path = "../../embassy/embassy-time-driver/" }
